@@ -1,0 +1,20 @@
+===========================================================================
+$NetBSD: MESSAGE,v 1.1.1.1 2004/10/10 12:38:21 jdolecek Exp $
+
+Please see the PL/Python section of the PostgreSQL Programmer's Guide
+(databases/postgresql-docs) for information on programming with
+${PKGNAME}.
+
+Note that PL/Python is unrestricted language, meaning it does not
+offer any way of restricting what users can do in it. Any DB user with
+access to PL/Python can run arbitrary Python code under privileges
+of the PostgreSQL server process.
+
+To configure PostgreSQL to enable PL/Python, run this as DBA:
+
+CREATE FUNCTION plpython_call_handler() RETURNS language_handler AS
+	'$libdir/plpython' LANGUAGE C;
+
+CREATE PROCEDURAL LANGUAGE plpythonu HANDLER plpython_call_handler;
+
+===========================================================================
