@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7390 2004/10/10 12:32:14 wiz Exp $
+$NetBSD: CHANGES,v 1.7391 2004/10/10 12:41:02 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4600,3 +4600,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated pkgdiff to 0.115 [dillo 2004-10-10]
 	Added p5-POE-0.29 [minskim 2004-10-10]
 	Updated cdparanoia to 3.0.9.8nb2 [mycroft 2004-10-10]
+	Added postgresql74-plpython 7.4.5 [jdolecek 2004-10-10]
